# Lorekeeper

./: .gitignore  .prettierrc.json  404.html  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  index.html  last-nightly-review.md  mkdocs.yml  pyproject.toml  recap-sessions.skill  sitemap.xml
.claude/: settings.json
.githooks/: commit-msg  pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: dashboard-primitives.instructions.md  javascript.instructions.md  python.instructions.md  scripts.instructions.md  tests.instructions.md
.github/workflows/: ci.yml  docs.yml  release.yml
.hermes/plans/: 2026-06-04_LKPR-58-session-end-hook.md  2026-06-04_LKPR-58-smart-link-candidate-pipeline.md
.mcp/: server.json
api-reference/: index.html
assets/prompts/: lorekeeper-agent-prompt.md
backlogs/: 2026-05-21-optimize-reflection-dedup.md  2026-05-22-agent-introspection-tools.md  2026-05-22-agent-workflow-protocol-skill.md  2026-05-22-dockerize-hermes-cloud-hosting.md  2026-05-22-lore-init-onboarding.md  2026-05-22-lore-insert-false-dedup.md  2026-05-22-memory-decay-model.md  2026-05-22-multi-agent-tenancy.md  2026-05-22-proactive-push-lore-surface.md  2026-05-22-session-end-hook.md  LKPR-1-optimize-reflection-dedup.md  LKPR-10-multi-agent-tenancy.md  LKPR-109-lore-search-recency-filter.md  LKPR-11-proactive-push-lore-surface.md  LKPR-13-sleep-cycle-consolidation.md  LKPR-17-memory-conflict-resolution.md  LKPR-18-memory-provenance-tagging.md  LKPR-19-fk-constraint-not-enforced.md  LKPR-20-graph-traversal-lore-related.md  LKPR-22-time-travel-queries-lore-search-at.md  LKPR-23-memory-rehearsal-spaced-repetition.md  LKPR-24-migrate-backlog-to-github-issues.md  LKPR-25-setup-linter-config-precommit-githook-and-docs.md  LKPR-26-lore-insert-missing-title-key-error.md  LKPR-27-auto-link-similar-on-insert.md  LKPR-29-lore-remember-fast-insert.md  LKPR-31-switch-to-lancedb-vector-store.md  LKPR-37-version-badge-in-dashboard.md  LKPR-4-context-budgeting-novelty-ranking.md  LKPR-41-memory-changelog.md  LKPR-42-context-weaving.md  LKPR-46-daily-memory-digest.md  LKPR-47-lore-playground.md  LKPR-48-mcp-server-card.md  LKPR-49-token-efficient-search.md  LKPR-5-cross-session-topic-observer.md  LKPR-50-dashboard-tests-and-code-hygiene.md  LKPR-51-linkstore-decomposition.md  LKPR-52-agent-query-dedup.md  LKPR-52-lean-simplification-pass.md  (+18 more)
backlogs/active/: LKPR-27-auto-link-similar-on-insert.md  LKPR-8-lore-wrap-session.md
backlogs/backlog/: LKPR-18-memory-provenance-tagging.md  LKPR-20-graph-traversal-lore-related.md  LKPR-24-hybrid-backlog.md  LKPR-27-auto-link-similar-on-insert.md  LKPR-28-inline-links-param-on-insert.md  LKPR-29-lore-remember-fast-insert.md  LKPR-30-reflect-auto-create-memories.md  LKPR-43-shared-serializer.md  LKPR-44-validate-config-overrides.md  LKPR-45-dashboard-js-event-registry.md  LKPR-49-token-efficient-search.md  LKPR-50-dashboard-tests-and-code-hygiene.md  LKPR-51-linkstore-decomposition.md  LKPR-52-lean-simplification-pass.md  LKPR-54-lore-forget.md  LKPR-56-dashboard-empty-state-memories.md  LKPR-57-pypi-publish-distribution.md  LKPR-59-dashboard-e2e-playwright.md  LKPR-8-lore-wrap-session.md
backlogs/cancelled/: LKPR-13-sleep-cycle-consolidation.md  LKPR-36-knowledge-debt-ratio.md  LKPR-41-memory-changelog.md  LKPR-62-memory-splitting.md  LKPR-68-cli-export-import.md  LKPR-94-dreaming-via-agent-invocation.md
backlogs/deferred/: LKPR-10-multi-agent-tenancy.md  LKPR-53-lore-import.md
backlogs/done/: LKPR-0-100x-code-review-pipeline.md  LKPR-1-optimize-reflection-dedup.md  LKPR-100-link-suggestion-mcp-tools.md  LKPR-101-dashboard-suggestion-tab.md  LKPR-132-links-table.md  LKPR-16-lore-insert-false-dedup.md  LKPR-18-memory-provenance-tagging.md  LKPR-19-fk-constraint-not-enforced.md  LKPR-21-lore-update-field-name-bug.md  LKPR-24-hybrid-backlog.md  LKPR-25-setup-linter-config-precommit-githook-and-docs.md  LKPR-26-lore-insert-missing-title-key-error.md  LKPR-27-auto-link-similar-on-insert.md  LKPR-28-inline-links-param-on-insert.md  LKPR-34-cloud-lorekeeper.md  (+34 more)
design/: Lorekeeper-Dashboard-v7-Design-Spec.md
docs/: 404.html  ARCHITECTURE.md  api-reference.md  code-review-guide.md  growth-strategy.md  index.html  index.md  linter-decisions.md  manifesto.md  positioning-manifesto.md  quickstart.md  seed-knowledge-gtm-agent.md  sitemap.xml
growth-strategy/: index.html
landing/: config.json  index.html
loop/: processed_sessions.txt  reconcile.md  run_log.jsonl
positioning-manifesto/: index.html
quickstart/: index.html
research/: agentic-loop.md  backup-feature-plan.md  reflect-integration-plan.md
scripts/: ab_experiment.py  analyze_ab_test.py  benchmark_retrieval.py  check-branch.sh  check_blockers.py  check_issues.py  check_mcp_docs.py  check_pr_size.sh  check_skills.py  gh-reconcile.py  gh_reconcile.py  learn_from_prs.py  lore-capture.sh  lorekeeper-backlog.sh  lorekeeper-setup.sh  migrate-link-types.py  migrate_from_json.py  migrate_reflections.py  next-ticket-number.sh  normalize_scores.py  pr-size-check.sh  reconcile.py  seed_lancedb.py  setup.sh  smoke_test.py  sweep-links.py  validate-ticket.sh
search/: search_index.json
tests/: _helpers.py  test_architecture.py  test_backend_coverage.py  test_chromadb_engine.py  test_cli_setup.py  test_config.py  test_dashboard.py  test_database.py  test_dedup.py  test_feedback.py  test_handlers.py  test_keyword_index.py  test_lancedb_engine.py  test_link_candidate.py  test_link_store.py  test_lkpr58_link_candidate.py  test_lkpr58_relation_classifier.py  test_lkpr60_lkpr54.py  test_lkpr78_critical_coverage.py  test_lkpr96_landing_docsite.py  test_memory_engine.py  test_memory_service.py  test_metrics_store.py  test_orchestrator.py  test_pr111_review_fixes.py  test_pr237_review_fixes.py  test_search.py  test_search_engine.py  test_serializers.py  test_settings.py  test_source_type_provenance.py  test_suggestion_store.py  test_sweep_lock_hold.py
(+616 files in other folders)
