[project]
name = "lorekeeper"
version = "2.0.0"
description = "Personal AI memory MCP server (Python + Mem0)"
requires-python = ">=3.11"
dependencies = [
  "mem0ai>=0.1.100",
  "chromadb>=0.5.0",
  "sentence-transformers>=3.0",
  "fastmcp>=0.4.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "rank-bm25>=0.2.2",
  "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]
dashboard = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "aiofiles>=23.0",
]

[project.scripts]
lorekeeper = "lorekeeper.__main__:main"
lorekeeper-dashboard = "lorekeeper.dashboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
