[project]
name = "lorekeeper-mcp"
version = "0.3.0"
description = "Self-improving MCP memory server for AI agents. One command, no cloud, no config."
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
keywords = ["mcp", "memory", "ai-agents", "claude-code", "cursor", "hermes", "knowledge-graph", "agent-memory"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "mem0ai>=0.1.100",
  "chromadb>=0.5.0",
  "sentence-transformers>=3.0",
  "fastmcp>=3.4.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "rank-bm25>=0.2.2",
  "structlog>=24.1",
  "lancedb>=0.30.2",
  "pyarrow>=24.0.0",
  "datasets>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "pytest-timeout>=2.3",
  "ruff>=0.5",
  "mypy>=1.10",
]
dashboard = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "aiofiles>=23.0",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocs-include-markdown-plugin>=6.0",
]

[project.scripts]
lorekeeper = "lorekeeper.__main__:main"
lorekeeper-dashboard = "lorekeeper.dashboard:main"

[project.urls]
Homepage = "https://github.com/Jessinra/Lorekeeper"
Repository = "https://github.com/Jessinra/Lorekeeper"
Documentation = "https://jessinra.github.io/Lorekeeper/"
Issues = "https://github.com/Jessinra/Lorekeeper/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lorekeeper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 300
addopts = "-m 'not e2e'"
# E2E tests are excluded from the default run; run them with:
#   uv run pytest tests/e2e/ -m e2e
markers = [
    "e2e: E2E dashboard tests requiring a live server and Playwright browser",
]
filterwarnings = [
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
    "ignore::DeprecationWarning:fastapi",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W  — pycodestyle (style + warnings)
# F    — pyflakes (undefined names, unused imports)
# I    — isort (import ordering)
# B    — flake8-bugbear (likely bugs, complexity)
# UP   — pyupgrade (modernize syntax for Python 3.11+)
# C4   — flake8-comprehensions (simplify comprehensions)
# RUF  — Ruff-specific rules
select = ["E", "W", "F", "I", "B", "UP", "C4", "RUF"]
ignore = [
  "B008",   # FastAPI File()/Depends() in argument defaults — idiomatic pattern
  "RUF003", # Ambiguous unicode in comments (en-dash, multiplication sign) — intentional
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "fastapi>=0.111",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "pytest-playwright>=0.6.0",
    "pytest-timeout>=2.3",
    "ruff>=0.15.13",
    "uvicorn[standard]>=0.30",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-include-markdown-plugin>=6.0",
]
